# lerobot-eval-slurm-tooling

./: .gitignore  CLAUDE.md  README.md  download_dataset.sh  eval_xvla_google_robot.py  experiment_inference.py  install_simplerenv.sh  plot_results.py  pyproject.toml  run_eval_aloha.sh  run_eval_fastwam_libero.sh  run_eval_google_robot_slurm.sh  run_eval_pi05_finetuned_libero.sh  run_eval_pi05_libero.sh  run_eval_pi05_libero_v2.sh  run_eval_pi0_libero.sh  run_eval_pi0fast_libero.sh  run_eval_pusht.sh  run_eval_pusht_vqbet.sh  run_eval_slurm.sh  run_eval_vla_jepa_libero.sh  run_eval_vla_jepa_libero_v2.sh  run_eval_vqbet_pusht_v2.sh  run_experiments.sh  run_inference.py  run_slurm.sh  slurm_batch_template.sh  submit_all_jobs.sh  submit_smolvla.sh  submit_smolvla_metaworld.sh  submit_smolvla_robomme.sh  test_state_fix.sh  test_xvla_google_robot.py
