[project]
name = "20260623-lerobot-demo"
version = "0.1.0"
description = "LeRobot X-VLA vs LIBERO-Spatial action comparison demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lerobot[xvla]",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "torch>=2.0",
]

[tool.uv]
# No workspace needed — standalone project
